添加页面描述

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no,viewport-fit=cover">
+    <meta name="description" content="Go语言编写获取城市天气预报，爬取中央气象数据。">
     <title>天气预报</title>
     <link href="/resources/css/basic.css" rel="stylesheet" type="text/css" />
 </head>
